[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-ai-debugger"
version = "0.1.0"
description = "AI-assisted error debugger with OpenRouter model fallback for Jupyter."
authors = [{ name = "Your Name" }]
readme = "README.md"
license = "MIT"
dependencies = ["requests", "ipython"]

[project.urls]
Homepage = "https://github.com/yourname/jupyter_ai_debugger"
